# rubber-docker

./: .gitignore  Makefile  README.md  cleanup.sh  pyproject.toml  setup.py
00_fork_exec/: rd.py
01_chroot_image/: rd.py
02_mount_ns/: rd.py
03_pivot_root/: rd.py
