[project]
name = "rubber-docker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "click>=8.3.1",
    "setuptools>=82.0.0",
]

[tool.setuptools]
packages = ["linux"]
package-dir = {"linux" = "."} 


[tool.ruff]
exclude = [
  ".git",
  ".venv"
]

line-length = 79

[tool.ruff.lint]
select = ["E", "F", "I","W","TCH"]
extend-select = ["T100"]


[tool.ruff.format]
indent-style="space"
